--- a/application-zuul.yml
+++ b/application-zuul.yml
@@ -19,6 +19,8 @@ zuul:
   routes:
     aigouEmployee.serviceId: employee-provider
     aigouEmployee.path: /employee/**  # 匹配 /xxx开头的请求映射到user-provider服务上
+    aigouEmployee.serviceId: service_product_application
+    aigouEmployee.path: /brand/**  # 匹配 /xxx开头的请求映射到user-provider服务上
   ignored-services: "*" #user-provider #忽略直接使用服务名访问  *忽略所有的
   prefix: /aigou   # 访问前缀
 
@@ -40,6 +42,8 @@ zuul:
   routes:
     aigouEmployee.serviceId: employee-provider
     aigouEmployee.path: /employee/**  # 匹配 /xxx开头的请求映射到user-provider服务上
+    aigouEmployee.serviceId: service_product_application
+    aigouEmployee.path: /brand/**  # 匹配 /xxx开头的请求映射到user-provider服务上
   ignored-services: "*" #user-provider #忽略直接使用服务名访问  *忽略所有的
   prefix: /aigou   # 访问前缀
  
